hajk-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/vcs-ref: develop
    app.openshift.io/vcs-uri: https://github.com/hajkmap/Hajk.git
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"hajk:latest","namespace":"00-geoserver"},"fieldPath":"spec.template.spec.containers[?(@.name==\"hajk\")].image","pause":"false"}]'
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: hajk
    app.kubernetes.io/component: hajk
    app.kubernetes.io/instance: hajk
    app.kubernetes.io/name: hajk
  name: hajk
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: hajk
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hajk
        deploymentconfig: hajk
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/00-geoserver/hajk
        imagePullPolicy: Always
        name: hajk
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /opt/app-root/src/.env
          name: hajk-env-cm
          subPath: .env
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: hajk-env-cm
        name: hajk-env-cm
