hajk-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-ref: develop
    app.openshift.io/vcs-uri: https://github.com/hajkmap/Hajk.git
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: hajk
    app.kubernetes.io/component: hajk
    app.kubernetes.io/instance: hajk
    app.kubernetes.io/name: hajk
  name: hajk
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 3002-tcp
    port: 3002
    protocol: TCP
    targetPort: 3002
  selector:
    app: hajk
    deploymentconfig: hajk
  sessionAffinity: None
  type: ClusterIP
