postgres-gis-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: postgres-gis
  name: postgres-gis
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: postgres-gis
  sessionAffinity: None
  type: ClusterIP
