geoserver-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
  labels:
    app: geoserver
    app.kubernetes.io/component: geoserver
    app.kubernetes.io/instance: geoserver
    app.kubernetes.io/name: geoserver
    app.kubernetes.io/part-of: geoserver-app
  name: geoserver
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: geoserver
    weight: 100
  wildcardPolicy: None
