hajk-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: hajk
    app.kubernetes.io/component: hajk
    app.kubernetes.io/instance: hajk
    app.kubernetes.io/name: hajk
  name: hajk
spec:
  port:
    targetPort: 3002-tcp
  to:
    kind: Service
    name: hajk
    weight: 100
  wildcardPolicy: None
